--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,3 +1,6 @@
 <h1>Here is the answer. Unclear? Dont ask for more please</h1>
+<p><%= params[:answer] %></p>
+<p class=italic>-You</p>
 <p><%= @answer %></p>
+<p class=italic>-Your coach</p>
 <%= link_to "Ask us", ask_path %>
